# Word_prediction_system_based_on_n-Gram

./: CMakeLists.txt  NGramModel.h  NgramModel.cpp  PVS-Studio.cmake  README.md  loaddialog.cpp  loaddialog.h  loaddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ngram.cpp  ngram.h  ngram_hasher.h  test.cpp  thread.cpp  thread.h  untitled.pro  vector_hasher.h  word_tokenizer.cpp
cmake/: Config.cmake
cmake/defaults/: PVSStudio.cmake  Sanitizers.cmake
inc/: Context.h  NGramModel.h  Ngram.h  NgramModel.h  Tokenizer.h  context_hasher.h  dialog.h  files_runnable.h  filesrunnable.h  hasher.h  loaddialog.h  main_window.h  mainwindow.h  ngram.h  ngram_hasher.h  ngram_model.h  thread.h  time.h  time_measuring.h  vector_hasher.h  word_tokenizer.h
inc/interface/: archieve_reader.h  dialog.h  files_runnable.h  main_window.h
inc/model/: ngram_hasher.h  ngram_model.h  vector_hasher.h  word_tokenizer.h
resources/: 51.txt  project.txt  style.qss
resources/img/: img.qrc
src/: Context.cpp  Ngram.cpp  NgramModel.cpp  Tokenizer.cpp  dialog.cpp  files_runnable.cpp  filesrunnable.cpp  loaddialog.cpp  loaddialog.ui  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.ui  my_archive.cpp  ngram.cpp  ngram_model.cpp  thread.cpp  word_tokenizer.cpp
src/interface/: archieve_reader.cpp  dialog.cpp  dialog.ui  files_runnable.cpp  main_window.cpp  main_window.ui  main_window.ui.autosave
src/model/: word_tokenizer.cpp
test_example/: main.cpp  test_example.pro
